--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "scripts": {
     "codegen": "graph codegen",
     "build": "graph build",
-    "deploy": "graph deploy --node https://api.studio.thegraph.com/deploy/ carbon-registry-test",
-    "create-local": "graph create --node http://localhost:8020/ carbon-registry-test",
-    "remove-local": "graph remove --node http://localhost:8020/ carbon-registry-test",
-    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 carbon-registry-test",
+    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ skjaldbaka17/carbon-registry-test",
+    "create-local": "graph create --node http://localhost:8020/ skjaldbaka17/carbon-registry-test",
+    "remove-local": "graph remove --node http://localhost:8020/ skjaldbaka17/carbon-registry-test",
+    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 skjaldbaka17/carbon-registry-test",
     "test": "graph test"
   },
   "dependencies": {
