--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -42,6 +42,7 @@ templates:
         - Holder
         - ExPostHolder
         - ExAnteHolder
+        - Cancellation
       abis:
         - name: Project
           file: ./abis/Project.json
