indexing polygon mainnet

--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "scripts": {
     "codegen": "graph codegen",
     "build": "graph build",
-    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ skjaldbaka17/carbon-registry-test",
-    "create-local": "graph create --node http://localhost:8020/ skjaldbaka17/carbon-registry-test",
-    "remove-local": "graph remove --node http://localhost:8020/ skjaldbaka17/carbon-registry-test",
-    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 skjaldbaka17/carbon-registry-test",
+    "deploy:polygon": "graph deploy --node https://api.thegraph.com/deploy/ skjaldbaka17/carbon-registry-polygon",
+    "create-local:polygon": "graph create --node http://localhost:8020/ skjaldbaka17/carbon-registry-polygon",
+    "remove-local:polygon": "graph remove --node http://localhost:8020/ skjaldbaka17/carbon-registry-polygon",
+    "deploy-local:polygon": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 skjaldbaka17/carbon-registry-polygon",
+    "deploy:mumbai": "graph deploy --node https://api.thegraph.com/deploy/ skjaldbaka17/carbon-registry-test",
+    "create-local:mumbai": "graph create --node http://localhost:8020/ skjaldbaka17/carbon-registry-test",
+    "remove-local:mumbai": "graph remove --node http://localhost:8020/ skjaldbaka17/carbon-registry-test",
+    "deploy-local:mumbai": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 skjaldbaka17/carbon-registry-test",
     "test": "graph test"
   },
   "dependencies": {
@@ -16,3 +20,4 @@
   },
   "devDependencies": { "matchstick-as": "0.5.0" }
 }
+
